--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -1,4 +1,6 @@
 <div class="error-page__wrapper">
+  <div class="error-page__back-button" (click)="navigation.back()"><md-icon>reply</md-icon></div>
+
   <div class="error-page">
     <div class="error-page__header">
       <img class="error-page__header__image" src="/assets/images/sleepingHamster.svg">
