--- a/src/app/error-page/error-page.component.scss
+++ b/src/app/error-page/error-page.component.scss
@@ -3,7 +3,7 @@
   &__wrapper {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 72px);
   }
 
   position: absolute;
@@ -16,6 +16,29 @@
 
   @media only screen and (max-width: 600px) {
     width: 100%;
+  }
+
+  &__back-button {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    width: 66px;
+    height: 66px;
+    border-radius: 50%;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+    background-color: #4A90E2;
+    color: white;
+    z-index: 1;
+    cursor: pointer;
+
+    md-icon {
+      position: absolute;
+      top: 12px;
+      left: 14px;
+      width: 36px;
+      height: 36px;
+      font-size: 36px;
+    }
   }
 
   &__header {
