--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -532,6 +532,12 @@ $blue-color: #4A90E2;
 
   &__spinner {
     margin: 20px auto;
+
+    &--main {
+      margin: 60px auto 0;
+      height: 170px !important;
+      width: 170px !important;
+    }
   }
 }
 
