--- a/src/app/pages/dashboard-page/events-summary/events-summary.component.html
+++ b/src/app/pages/dashboard-page/events-summary/events-summary.component.html
@@ -14,4 +14,6 @@
     <chart #chartI [options]="options" (load)="loadChart(chartI)"></chart>
   </div>
   <md-spinner *ngIf="!loaded"></md-spinner>
+
+  <div class="dashboard__table-chart__actions"><span [routerLink]="['/coming-soon']">VIEW MORE</span></div>
 </div>
