--- a/src/assets/scss/_tracker-view.scss
+++ b/src/assets/scss/_tracker-view.scss
@@ -3,7 +3,7 @@
   &__card {
     display: inline-block;
     margin: 10px;
-    max-width: 650px;
+    max-width: calc(100vw - 220px);
     min-width: 350px;
     background: white;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
@@ -90,12 +90,24 @@
       &__body {
         margin-bottom: 20px;
 
+        .invisible {
+          .CodeMirror {
+            height: 0;
+            border: none;
+          }
+        }
+
+        .CodeMirror {
+          border: 1px solid #bebab0;
+          background: #faf8f0;
+        }
+
         md-textarea {
           width: 100%;
-          min-width: 610px;
+          min-width: 500px;
 
           textarea {
-            height: 160px;
+            height: 80px;
           }
 
           .md-input-wrapper {
