--- a/src/app/graph-qldocs/components/graphql-docs/graphql-docs.component.html
+++ b/src/app/graph-qldocs/components/graphql-docs/graphql-docs.component.html
@@ -1,5 +1,9 @@
 <div class="docs">
-  <queries [queryType]="queryType" [title]="'Queries'"></queries>
-
-  <queries [queryType]="mutationType" [title]="'Mutations'"></queries>
+  <div class="docs__sidenav">
+    <md-input placeholder="Filter by Type" [(ngModel)]="filterString"></md-input>
+  </div>
+  <div class="docs__content">
+    <doc-type *ngFor="let type of types | filterTypes: filterString" [type]="type"></doc-type>
+    <md-spinner *ngIf="!types"></md-spinner>
+  </div>
 </div>
