--- a/src/app/graph-qldocs/components/graphql-docs/graphql-docs.component.scss
+++ b/src/app/graph-qldocs/components/graphql-docs/graphql-docs.component.scss
@@ -1,5 +1,28 @@
 .docs {
   background: #fff;
-  min-height: calc(100vh - 75px);
-  padding: 20px 60px;
+  height: calc(100vh - 75px);
+  font-size: 16px;
+  overflow: hidden;
+  display: flex;
+
+  &__sidenav {
+    border-right: 2px solid rgba(0, 0, 0, 0.2);
+
+    md-input {
+      margin: 30px 20px;
+      width: 150px;
+    }
+  }
+
+  &__content {
+    overflow: auto;
+    padding: 40px 20px;
+    width: 100%;
+
+    md-spinner {
+      margin: 50px auto;
+      height: 180px;
+      width: 180px;
+    }
+  }
 }
