--- a/src/app/graph-qldocs/components/graphql-docs/graphql-docs.component.scss
+++ b/src/app/graph-qldocs/components/graphql-docs/graphql-docs.component.scss
@@ -1,28 +1,25 @@
 .docs {
   background: #fff;
-  height: calc(100vh - 75px);
+  height: calc(100vh - 70px);
   font-size: 16px;
   overflow: hidden;
   display: flex;
 
   &__sidenav {
     border-right: 2px solid rgba(0, 0, 0, 0.2);
-
-    md-input {
-      margin: 30px 20px;
-      width: 150px;
-    }
+    overflow: auto;
+    min-width: 250px;
   }
 
   &__content {
     overflow: auto;
     padding: 40px 20px;
     width: 100%;
+  }
 
-    md-spinner {
-      margin: 50px auto;
-      height: 180px;
-      width: 180px;
-    }
+  md-spinner {
+    margin: 60px auto;
+    height: 180px;
+    width: 180px;
   }
 }
