Small design changes on side search graph docs component

--- a/src/app/graph-qldocs/components/side-search/side-search.component.html
+++ b/src/app/graph-qldocs/components/side-search/side-search.component.html
@@ -6,13 +6,13 @@
       <div
         (click)="nav(searchItem.name)"
         class="side-search__item__title">
-        {{searchItem.name}}
+        <span>{{searchItem.name === 'Query' ? 'Queries' : searchItem.name+'s'}}</span>
       </div>
       <div
         *ngFor="let child of searchItem.children | filterSearchItems: filterString"
         (click)="nav(child)"
         class="side-search__item__child">
-        - {{child}}
+        - <span>{{child}}</span>
       </div>
     </div>
   </ng-container>
