--- a/src/assets/scss/_profile.scss
+++ b/src/assets/scss/_profile.scss
@@ -5,7 +5,7 @@
     &__general {
       display: inline-block;
       position: relative;
-      margin: 10px;
+      margin: 10px 10px 120px;
       box-shadow: 0 0 3px rgba(0,0,0,0.3);
       background: white;
 
@@ -41,40 +41,16 @@
         padding: 35px 15px 50px;
         font-size:14px;
 
-        md-input, md-input-container {
+        md-input, md-input-container, .profile-page__content__general__data__dropdown {
           display: inline-block;
           margin: 0 45px 10px 0;
           width: calc(50% - 50px);
         }
 
         &__dropdown {
-          display: inline-block;
-          margin: 0 45px 10px 0;
-          width: calc(50% - 50px);
-
-          &--active {
-            color: rgba(0, 0, 0, 0.3);
-          }
-
-          span {
-            display: flex;
-            border-bottom: 1px solid rgba(0, 0, 0, 0.11);
-            width: 50%;
-            min-width: 90px;
-            padding-bottom: 3px;
-            cursor: pointer;
-
-            md-icon {
-              margin-left: auto;
-              height: 16px;
-              width: 16px;
-              vertical-align: middle;
-              font-size: 16px;
-            }
-          }
-
-          .unselected {
-            color: rgba(0, 0, 0, 0.35)
+          md-input-container {
+            margin: 0;
+            width: 100%;
           }
         }
       }
